--- a/MVC_Pekara/Views/Home/Index.cshtml
+++ b/MVC_Pekara/Views/Home/Index.cshtml
@@ -51,12 +51,17 @@
         
     </div>
 </div>
-@*<script src="~/Scripts/jquery-3.3.1.min.js"></script>*@
-@*<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<style>
 
-<script src="~/Scripts/bootstrap.js"></script>
-<link href="~/Content/bootstrap.css" rel="stylesheet" />*@
+    .jumbotron, .btn-lg {
+        background: #EEE8AA;
+        color: #000;
+        border: 1px solid #333;
+        box-shadow: 8px 8px 5px #BDB76B;
+    }
 
+        .btn-lg:hover {
+            color: #EEE8AA;
+        }
+</style>
 
