--- a/MVC_Pekara/Views/Shared/_Layout.cshtml
+++ b/MVC_Pekara/Views/Shared/_Layout.cshtml
@@ -50,3 +50,20 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+<style>
+
+    .navbar {
+        width: 80%;
+        position: fixed;
+        left: 10%;
+        background: #EEE8AA;
+        border: 1px solid #333;
+        box-shadow: 8px 8px 5px #BDB76B;
+    }
+    .navbar-inverse .navbar-brand {
+        color: #000;
+    }
+    .navbar-inverse .navbar-nav > li > a {
+        color: #000;
+    }
+</style>
