--- a/MVC_Pekara/Views/Nalog_Stavke/Index.cshtml
+++ b/MVC_Pekara/Views/Nalog_Stavke/Index.cshtml
@@ -97,5 +97,11 @@
         tr.error {
             background-color: rgba(255,0,0,0.35);
         }
+        .btn {
+            background: #EEE8AA;
+            border: 1px solid #333;
+            box-shadow: 8px 8px 5px #BDB76B;
+            color: #000;
+        }
         
     </style>
