--- a/MVC_Pekara/Views/Home/Index.cshtml
+++ b/MVC_Pekara/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
         background: #EEE8AA;
         color: #000;
         border: 1px solid #333;
-        box-shadow: 8px 8px 5px #BDB76B;
+        box-shadow: 8px 8px 5px #EEE8AA;
     }
 
         .btn-lg:hover {
