--- a/MVC_Pekara/Views/Shared/_Layout.cshtml
+++ b/MVC_Pekara/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" />
     <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.8.3.js"></script>/
+    <script src="~/Scripts/modernizr-2.8.3.js"></script>
 
 </head>
 <body>
@@ -20,7 +20,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-
                 </button>
                 @Html.ActionLink("Pekara", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -42,7 +41,7 @@
             <p>&copy; @DateTime.Now.Year - Pekara</p>
         </footer>
     </div>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+   
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
@@ -53,12 +52,12 @@
 <style>
 
     .navbar {
-        width: 80%;
+        width: 98%;
         position: fixed;
-        left: 10%;
+        left: 1%;
         background: #EEE8AA;
         border: 1px solid #333;
-        box-shadow: 8px 8px 5px #BDB76B;
+        box-shadow: 8px 8px 5px #EEE8AA;
     }
     .navbar-inverse .navbar-brand {
         color: #000;
