--- a/MVC_Pekara/Views/Home/Index.cshtml
+++ b/MVC_Pekara/Views/Home/Index.cshtml
@@ -58,8 +58,10 @@
         color: #000;
         border: 1px solid #333;
         box-shadow: 8px 8px 5px #EEE8AA;
+        position: sticky;
+        top: 80px;
     }
-
+    
         .btn-lg:hover {
             color: #EEE8AA;
         }
