--- a/MVC_Pekara/Views/Kategorije/Index.cshtml
+++ b/MVC_Pekara/Views/Kategorije/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 @{
-    ViewBag.Title = "Godine";
+    ViewBag.Title = "Kategorije";
 
 }
 
@@ -11,7 +11,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Godine</title>
+    <title>Kategorije</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" />
@@ -31,7 +31,7 @@
 <body>
 
     <div style="width:90%; margin:0 auto" class="tablecontainer">
-        <a class="popup btn "
+        <a class="popup btn btn-success"
            href="/kategorije/create/" style="margin-bottom:20px; margin-top:20px">Unesite kategoriju</a>
         <table id="myKategorije" class="table" style="width:100%">
             <thead>
