--- a/MVC_Pekara/Views/Shared/_Layout.cshtml
+++ b/MVC_Pekara/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <li>@Html.ActionLink("Kategorije", "Index", "Kategorije")</li>
                     <li>@Html.ActionLink("Artikli", "Index", "Artikli")</li>
                     <li>@Html.ActionLink("Nalog", "Index", "Nalog_Stavke")</li>
-                    <li>@Html.ActionLink("Report", "Index", "ReportMVC")</li>
+                    <li>@Html.ActionLink("Report", "NalSt", "ReportMVC")</li>
                 </ul>
             </div>
         </div>
