--- a/MVC_Pekara/Views/Artikli/Edit.cshtml
+++ b/MVC_Pekara/Views/Artikli/Edit.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.KategorijaID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.KategorijaID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("KategorijaID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.KategorijaID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -67,7 +67,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
