--- a/MVC_Pekara/Views/Artikli/Index.cshtml
+++ b/MVC_Pekara/Views/Artikli/Index.cshtml
@@ -1,64 +1,146 @@
-﻿@model IEnumerable<MVC_Pekara.Artikli>
+﻿
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Artikli";
+
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.KategorijaID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NazivArtikla)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Masa)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TipBrasna)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProizvodjackaCenaBezPDV)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ProizvodjackaCenaSaPDV)
-        </th>
-        <th></th>
-    </tr>
+<!DOCTYPE html>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.KategorijaID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NazivArtikla)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Masa)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TipBrasna)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProizvodjackaCenaBezPDV)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ProizvodjackaCenaSaPDV)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ArtikalID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ArtikalID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ArtikalID })|
-            @Html.ActionLink("Report","Rpt_ArtikalID",new { artikalID=item.ArtikalID }, null)
-        </td>
-    </tr>
-}
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Artikli</title>
 
-</table>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" />
+
+    <style>
+        span.field-validation-error {
+            color: red;
+        }
+
+        .btn, .ui-widget.ui-widget-content, .ui-dialog .ui-dialog-titlebar {
+            background: #EEE8AA;
+            border: 1px solid #333;
+            box-shadow: 8px 8px 5px #BDB76B;
+            color: #000;
+        }
+    </style>
+</head>
+<body>
+
+    <div style="width:90%; margin:0 auto" class="tablecontainer">
+        <a class="popup btn btn-success"
+           href="/artikli/create/" style="margin-bottom:20px; margin-top:20px">Unesite artikal</a>
+        <table id="myArtikli" class="table" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Kategorija</th>
+                    <th>Naziv artikla</th>
+                    <th>Masa (g)</th>
+                    <th>Tip brasna</th>
+                    <th>Proizv. cena bez PDV-a</th>
+                    <th>Proizv. cena sa PDV-om</th>
+
+                    <th>Edit</th>
+                    <th>Details</th>
+                    <th>Delete</th>
+                    <th>Report</th>
+
+                </tr>
+
+            </thead>
+
+        </table>
+    </div>
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            var oTable = $('#myArtikli').DataTable({
+                "ajax": {
+                    "url": '/Artikli/GetArtiklis',
+                    "type": "get",
+                    "datatype": "json"
+                },
+                "columns": [
+                    { "data": null, "render": function (data) { return (data["NazivKategorije"]) }, "autowidth": true },
+                    { "data": "NazivArtikla", "autowidth": true },
+                    { "data": "Masa", "autowidth": true },
+                    { "data": "TipBrasna", "autowidth": true },
+                    { "data": "ProizvodjackaCenaBezPDV", "autowidth": true },
+                    { "data": "ProizvodjackaCenaSaPDV", "autowidth": true },
+
+                    {
+                        "data": "ArtikalID", "width": "50px", "render": function (data) {
+                            return '<a class="popup" href="/Artikli/edit/' + data + '">Edit</a>';
+                        }
+                    },
+                    {
+                        "data": "ArtikalID", "width": "50px", "render": function (data) {
+                            return '<a class="popup" href="/Artikli/details/' + data + '">Details</a>';
+                        }
+                    },
+                    {
+                        "data": "ArtikalID", "width": "50px", "render": function (data) {
+                            return '<a class="popup" href="/Artikli/delete/' + data + '">Delete</a>';
+                        }
+                    },
+                    {
+                        "data": "ArtikalID", "width": "50px", "render": function (data) {
+                            return '<a href="/Artikli/Rpt_ArtikalID/' + data + '">Report</a>';
+                        }
+                    }
+                ]
+            })
+            $('.tablecontainer').on('click', 'a.popup', function (e) {
+                e.preventDefault();
+                OpenPopup($(this).attr('href'));
+            })
+            function OpenPopup(pageUrl) {
+                var $pageContent = $('<div/>');
+                $pageContent.load(pageUrl, function () {
+                    $('#popupForm', $pageContent).removeData('validator');
+                    $('#popupForm', $pageContent).removeData('unobtrusiveValidation');
+                    //$.validator.unobtrusive.parse('form');
+                });
+                $dialog = $('<div class="popupWindow" style="overflow:auto"></div>')
+                    .html($pageContent)
+                    .dialog({
+                        draggable: false,
+                        autoOpen: false,
+                        resizable: false,
+                        model: true,
+                        title: 'Popup Dialog',
+                        hight: 550,
+                        width: 600,
+                        close: function () {
+                            $dialog.dialog('destroy').remove();
+                        }
+                    })
+                $('.popupWindow').on('submit', '#popupForm', function (e) {
+                    var url = $('#popupForm')[0].action;
+                    $.ajax({
+                        type: 'POST',
+                        url: url,
+                        data: $('#popupForm').serialize(),
+                        success: function (data) {
+                            if (data.status) {
+                                $dialog.dialog('close');
+                                oTable.ajax.reload();
+                            }
+                        }
+                    })
+                    e.preventDefault();
+                })
+                $dialog.dialog('open');
+            }
+        })
+    </script>
+</body>
+</html>
