--- a/MVC_Pekara/Views/Kategorije/Delete.cshtml
+++ b/MVC_Pekara/Views/Kategorije/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Da li ste sigurni da zelite ovo da izbrisete?</h3>
 <div>
     <h4>Kategorije</h4>
     <hr />
@@ -25,7 +25,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-success" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
