--- a/MVC_Pekara/Views/Nalog_Stavke/Rpt_NalStBrN.cshtml
+++ b/MVC_Pekara/Views/Nalog_Stavke/Rpt_NalStBrN.cshtml
@@ -2,15 +2,26 @@
 @using ReportViewerForMvc;
 
 @{
-    ViewBag.Title = "Rpt_NalStBrN";
+    ViewBag.Title = "Nalog";
 }
 
-<h2>Rpt_NalStBrN</h2>
+<h2>Nalog proizvodnje</h2>
 @using (Html.BeginForm())
 {
     <input type="text" name="brojNaloga" />
-    <input type="submit" />
+    <input type="submit" value="Posalji" />
 }
 
 @Html.ReportViewer(ViewBag.ReportViewer as Microsoft.Reporting.WebForms.ReportViewer)
 
+<style>
+    iframe {
+       
+        width: 100%;
+        height: 500px;
+        border: none;
+        overflow-y: auto;
+        overflow-x: auto;
+        
+    }
+</style>
