--- a/MVC_Pekara/Views/Artikli/Index.cshtml
+++ b/MVC_Pekara/Views/Artikli/Index.cshtml
@@ -93,7 +93,7 @@
                     },
                     {
                         "data": "ArtikalID", "width": "50px", "render": function (data) {
-                            return '<a href="/Artikli/Rpt_ArtikalID/' + data + '">Report</a>';
+                            return '<a class="popup" href="/Artikli/KatArt?artikalID=' + data + '">Report</a>';
                         }
                     }
                 ]
