--- a/MVC_Pekara/Views/ReportMVC/KatArt.cshtml
+++ b/MVC_Pekara/Views/ReportMVC/KatArt.cshtml
@@ -6,7 +6,7 @@
 }
 <h2>Report</h2>
 
-<h4>Artikli</h4>
+<h4>Unesi ID artikla:</h4>
 @using (Html.BeginForm())
 {
     <input type="text" name="artikalID" />
